# stale-internet

./: .gitignore  README.md  docker-compose.yml  pyproject.toml  pytest.ini
.github/workflows/: check.yml  test.yml
config/: asgi.py  ci_settings.py  ci_test_settings.py  settings.py  urls.py  wsgi.py
db-admin/: docker-compose.yml  pyproject.toml
db-admin/db_admin/: settings.py  urls.py
db_admin/: README.md  pyproject.toml  pytest.ini  serializers.py
db_admin/controls/: apps.py
db_admin/controls/management/commands/: scrub_database.py
db_admin/db_admin/: settings.py  urls.py
db_admin/reactions/: apps.py  models.py  serializers.py  views.py
db_admin/reactions/migrations/: 0001_initial.py
db_admin/subjects/: admin.py  apps.py  models.py  serializers.py  views.py
db_admin/subjects/migrations/: 0001_initial.py
db_admin/tests/: factories.py
db_admin/tests/factories/: reactions.py  subjects.py  themes.py  users.py
db_admin/tests/reactions/: test_reactions_models.py
db_admin/themes/: admin.py  apps.py  models.py  serializers.py  urls.py  views.py
db_admin/themes/migrations/: 0001_initial.py  0002_theme_timestamp.py
db_admin/utils/: commands.py
